# optibat

./: .gitignore  README.md  acronyms.tex  appendixA.tex  autorizacion.tex  chapter1.tex  chapter10.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex  jenkinsfileCICD  mydiss.cls  principal.tex  references.bib  resumen.tex  title.tex
.github/workflows/: pr_scan_and_analysis.yml  trigger_jenkins.yml
.overleaf/: settings.json
assets/: .gitignore  acronyms.tex  autorizacion.tex  chapter1.tex  chapter10.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex  class_diss.cls  principal.tex  references.bib  resumen.tex
assets/scripts/: pkgloader.py
optibat/: .gitignore  README.md  pyproject.toml
optibat/.optibat/: config.yaml
optibat/scripts/: Install.bat  Optibat.bat  Optibat_XXXX_XXXX_2.bat  Optibat_XXXX_XXXX_3.bat  Optibat_XXXX_XXXX_4.bat
optibat/src/optibat/: __init__.py  __main__.py  auth.py  config.py  market.py  metering.py  model.py  offer.py  output.py
optibat/src/optibat/sql/: optibat.sql
scripts/: pkgloader.py
